<resources>
    <string name="app_name">Stormy</string>
    <string name="error_title">Oops!, sorry</string>
    <string name="error_description">There was an error, please try again</string>
    <string name="error_ok_button">OK</string>
    <string name="unavailable_message">Network is unavailable</string>
    <string name="error_title_network">Network error</string>
    <string name="error_desc_network">Please, check your internet connection</string>
    <string name="temperature">##</string>
    <string name="time">hh:mm</string>
    <string name="timezone">timezone</string>
    <string name="icon">place for icon</string>
    <string name="celsius">celsius</string>
    <string name="humidity_label">Humidity</string>
    <string name="rain_label">Precip?</string>
    <string name="hourly_button">hourly</string>
    <string name="daily_button">daily</string>
    <string name="summary">summary</string>
    <string name="time_example">11:20</string>
    <string name="refreshButton">refresh btn</string>
    <string name="info">info</string>
    <string name="day_of_the_week_example">Wednesday</string>
    <string name="no_data">There is no data to display</string>
    <string name="max_temp">Max:</string>
    <string name="min_temp">Min:</string>
    <string name="icon_weather">icon weather</string>
    <string name="this_week_label">This Week\'s Weather</string>
</resources>
