<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_hourly_time"
        android:layout_weight="2"
        style="@style/for_tv_in_daily_list_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time"/>

    <TextView
        android:id="@+id/tv_hourly_temperature"
        android:layout_weight="1"
        style="@style/for_tv_in_daily_list_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/temperature"/>

    <ImageView
        android:id="@+id/iv_hourly_icon_weather"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_weather"
        android:src="@drawable/partly_cloudy"/>

    <TextView
        android:id="@+id/tv_hourly_summary"
        android:layout_weight="5"
        style="@style/for_tv_in_daily_list_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/summary"/>

</LinearLayout>