<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_gradient"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/refresh"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="35dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/refreshButton"
        android:layout_alignLeft="@+id/refreshButton"
        android:layout_alignStart="@+id/refreshButton"
        android:layout_alignRight="@+id/refreshButton"
        android:layout_alignEnd="@+id/refreshButton"
        android:layout_alignTop="@+id/refreshButton"/>

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="130sp"
        android:text="@string/temperature"
        android:textColor="@color/white"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/celsiusImageView"
        android:src="@drawable/degree"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/celsius"
        android:layout_alignTop="@+id/temperatureTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"/>


    <LinearLayout
        android:id="@+id/linear_layout_icon_time_zone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/refreshButton"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/iconWeatherImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/cloudy"
            android:contentDescription="@string/icon"/>

        <TextView
            android:id="@+id/timezoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"
            android:text="@string/timezone"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="11:20"
        android:textColor="#80FFFFFF"
        android:layout_above="@+id/temperatureTextView"
        android:layout_below="@id/linear_layout_icon_time_zone"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/grid_layout"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperatureTextView"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/humidity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/humidity_label"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/rain_label"
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rain_label"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:text="info"/>

            <TextView
                android:id="@+id/rain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:text="info"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/summary"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:text="summary"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/grid_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/summary"
        android:layout_marginTop="15dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/hourly_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hourly_button"
            android:background="@color/semi_transparent_white"/>

        <Button
            android:id="@+id/daily_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/daily_button"
            android:layout_marginLeft="2dp"
            android:background="@color/semi_transparent_white"/>

    </LinearLayout>

</RelativeLayout>
